manifest/validator.yaml
apiVersion: v1
kind: Service
metadata:
  name: uid-val
  namespace: validator
  labels:
    name: uid-admission
spec:
  ports:
  - name: webhook
    port: 443
    targetPort: 9443
  selector:
    name: uid-admission
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: uid-admission
  namespace: validator
  labels:
    name: uid-admission
spec:
  replicas: 1
  selector:
    matchLabels:
      name: uid-admission
  template:
    metadata:
      name: uid-admission 
      labels:
        name: uid-admission
    spec:
      containers:
        - name: uid-validating-webhook
          image: localhost:32000/uid-validating-webhook:1.0.0
          imagePullPolicy: IfNotPresent
          command: [ "/bin/bash", "-c", "--" ]
          args: [ "/usr/local/bin/uid-validating-webhook" ]
          resources:
            limits:
              memory: 50Mi
              cpu: 300m
            requests:
              memory: 50Mi
              cpu: 300m
          volumeMounts:
            - name: webhook-certs
              mountPath: /etc/webhook/certs
              readOnly: true
            - name: pod-uid-policy
              mountPath: /etc/webhook
              readOnly: true
          securityContext:
            readOnlyRootFilesystem: true
      volumes:
        - name: webhook-certs
          secret:
            secretName: uid-admission-certs
        - name: pod-uid-policy
          configMap:
            name: uid-admission
            items:
            - key: pod-uid-policy.yaml
              path: pod-uid-policy.yaml            

---
apiVersion: admissionregistration.k8s.io/v1beta1
kind: ValidatingWebhookConfiguration
metadata:
  name: uid-admission
webhooks:
  - name: uid-admission.balchua.github.com
    clientConfig:
      service:
         name: uid-val
         namespace: validator
         path: "/"
      caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSUMvakNDQWVhZ0F3SUJBZ0lKQUxCbzk5cGFCeEVPTUEwR0NTcUdTSWIzRFFFQkN3VUFNQlF4RWpBUUJnTlYKQkFNTUNURXlOeTR3TGpBdU1UQWVGdzB4T1RBME16QXlNek14TURaYUZ3MDBOakE1TVRVeU16TXhNRFphTUJReApFakFRQmdOVkJBTU1DVEV5Tnk0d0xqQXVNVENDQVNJd0RRWUpLb1pJaHZjTkFRRUJCUUFEZ2dFUEFEQ0NBUW9DCmdnRUJBTk9ETWJzYWF0eitvWDZOY09HMlZ1SDlmNWoyd0VyUURjdXUrcVdrcTd4aUdKVWVQZFVXVEJTSWFSaEcKVEhETVhhSjMwNjVXUW5sTWxPZXV3NGNYc1Yvc2RCNGlwRkNBUy9UWkJLb1krS3FQWG4vWXA5WkNPa0E2dHlCUQpzOE11Tk03bU9m [...]
    rules:
      - operations: ["CREATE","UPDATE"]
        apiGroups: [""]
        apiVersions: ["v1"]
        resources: ["pods"]
